Remove single source file launch in README.md
The refactoring in commit 9fef3d4 split the single source file into two
source files, "accidentally" removing the single file launch possibility